tests/fail/elaboration/record-proj/head-is-unit.fathom
//~ exit-code = 1

let _ : Bool = {}.foo;

{}
